Update for Portfolio Website

--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Low Beverly</h1>
         <p>Computer Engineering Student | Aspiring Entrepreneur</p>
     </header>
-    <section id="projects">
+    <section id="Robotics projects">
         <h2>Projects</h2>
         <ul>
-            <li><a href="https://github.com/yourusername/project1">Project 1</a></li>
-            <li><a href="https://github.com/yourusername/project2">Project 2</a></li>
+            <li><a href="https://github.com/Bev-low/Alex-the-Rescue-Bot">Alex-the-Rescue-Bot</a></li>
+            <li><a href="https://github.com/Bev-low/Ryan-The-Maze-Runner">Ryan-The-Maze-Runner</a></li>
         </ul>
     </section>
+</header>
+<section id="Software projects">
+    <h2>Projects</h2>
+    <ul>
+        <li><a href="https://github.com/Bev-low/ip">ChattyCharlie</a></li>
+        <li><a href="https://github.com/Bev-low/tp">BuffBudy</a></li>
+    </ul>
+</section>
     <section id="skills">
         <h2>Skills</h2>
-        <p>Programming: C, C++, Java</p>
-        <p>Marketing Campaigns, Videography, Photography</p>
+        <p>Programming Languages: C, C++, Java</p>
+        <p>Technical Knowledge: Data Structures and Algorithms, Object-Oriented Programming</p>
+        <p>Hobbies: Hiking, Bouldering, Surfing, Videography, Photography</p>
+        <p>Languages: English, Chinese</p>
     </section>
     <footer>
-        <p>Contact: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        <p>Contact: <a href="low_beverly@u.nus.edu">youremail@example.com</a></p>
     </footer>
 </body>
 </html>
