--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
         <h1>Low Beverly</h1>
         <p>Computer Engineering Student | Aspiring Entrepreneur</p>
     </header>
-    <section id="Robotics projects">
-        <h2>Projects</h2>
+
+    <section id="robotics-projects">
+        <h2>Robotics Projects</h2>
         <ul>
             <li><a href="https://github.com/Bev-low/Alex-the-Rescue-Bot">Alex-the-Rescue-Bot</a></li>
             <li><a href="https://github.com/Bev-low/Ryan-The-Maze-Runner">Ryan-The-Maze-Runner</a></li>
         </ul>
     </section>
-</header>
-<section id="Software projects">
-    <h2>Projects</h2>
-    <ul>
-        <li><a href="https://github.com/Bev-low/ip">ChattyCharlie</a></li>
-        <li><a href="https://github.com/Bev-low/tp">BuffBudy</a></li>
-    </ul>
-</section>
+
+    <section id="software-projects">
+        <h2>Software Projects</h2>
+        <ul>
+            <li><a href="https://github.com/Bev-low/ip">ChattyCharlie</a></li>
+            <li><a href="https://github.com/Bev-low/tp">BuffBudy</a></li>
+        </ul>
+    </section>
+
     <section id="skills">
         <h2>Skills</h2>
         <p>Programming Languages: C, C++, Java</p>
@@ -33,8 +35,10 @@
         <p>Hobbies: Hiking, Bouldering, Surfing, Videography, Photography</p>
         <p>Languages: English, Chinese</p>
     </section>
+
     <footer>
-        <p>Contact: <a href="low_beverly@u.nus.edu">youremail@example.com</a></p>
+        <p>Contact: <a href="mailto:low_beverly@u.nus.edu">low_beverly@u.nus.edu</a></p>
     </footer>
 </body>
 </html>
+
