--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Low Beverly</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,33 +12,33 @@
     <p>Computer Engineering Student | Aspiring Entrepreneur</p>
 </header>
 
-<!-- Tab Navigation -->
-<nav class="tabs">
-    <button onclick="openTab('summary')">Summary</button>
-    <button onclick="openTab('projects')">Projects</button>
-    <button onclick="openTab('hobbies')">Hobbies</button>
-    <button onclick="openTab('contact')">Contact</button>
-</nav>
+<!-- Navigation Tabs -->
+<div class="nav-tabs">
+    <a href="#summary" onclick="showSection('summary')">Summary</a>
+    <a href="#projects" onclick="showSection('projects')">Projects</a>
+    <a href="#hobbies" onclick="showSection('hobbies')">Hobbies</a>
+    <a href="#contact" onclick="showSection('contact')">Contact</a>
+</div>
 
 <!-- Content Sections -->
-<div id="summary" class="tab-content">
+<div id="summary" class="content-section">
     <h2>Summary</h2>
     <p>Your summary content goes here...</p>
 </div>
 
-<div id="projects" class="tab-content" style="display: none;">
+<div id="projects" class="content-section" style="display: none;">
     <h2>Projects</h2>
     <p>Your projects content goes here...</p>
 </div>
 
-<div id="hobbies" class="tab-content" style="display: none;">
+<div id="hobbies" class="content-section" style="display: none;">
     <h2>Hobbies</h2>
     <p>Your hobbies content goes here...</p>
 </div>
 
-<div id="contact" class="tab-content" style="display: none;">
+<div id="contact" class="content-section" style="display: none;">
     <h2>Contact</h2>
-    <p>Your contact information goes here...</p>
+    <p>Your contact content goes here...</p>
 </div>
 
 <script src="scripts.js"></script>
