Update the buttons

--- a/index.html
+++ b/index.html
@@ -12,35 +12,15 @@
     <p>Computer Engineering Student | Aspiring Entrepreneur</p>
 </header>
 
-<!-- Navigation Tabs -->
-<div class="nav-tabs">
-    <a href="#summary" onclick="showSection('summary')">Summary</a>
-    <a href="#projects" onclick="showSection('projects')">Projects</a>
-    <a href="#hobbies" onclick="showSection('hobbies')">Hobbies</a>
-    <a href="#contact" onclick="showSection('contact')">Contact</a>
-</div>
-
-<!-- Content Sections -->
-<div id="summary" class="content-section">
-    <h2>Summary</h2>
-    <p>Your summary content goes here...</p>
-</div>
-
-<div id="projects" class="content-section" style="display: none;">
-    <h2>Projects</h2>
-    <p>Your projects content goes here...</p>
-</div>
-
-<div id="hobbies" class="content-section" style="display: none;">
-    <h2>Hobbies</h2>
-    <p>Your hobbies content goes here...</p>
-</div>
-
-<div id="contact" class="content-section" style="display: none;">
-    <h2>Contact</h2>
-    <p>Your contact content goes here...</p>
-</div>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="summary.html">Summary</a>
+    <a href="projects.html">Projects</a>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="contact.html">Contact</a>
+</nav>
 
 <script src="scripts.js"></script>
 </body>
 </html>
+
