Added images for contact

--- a/contact.html
+++ b/contact.html
@@ -15,31 +15,14 @@
 <!-- Contact Information -->
 <div class="contact-info">
   <a href="mailto:lowbeverlypersonal@gmail.com" target="_blank">
-    <img src="email-icon.png" alt="Email Icon"> lowbeverlypersonal@gmail.com
+    <img src="images/email-icon.jpg" alt="Email Icon"> lowbeverlypersonal@gmail.com
   </a>
   <a href="https://linkedin.com/in/yourprofile" target="_blank">
-    <img src="linkedin-icon.png" alt="LinkedIn Icon"> LinkedIn Profile
+    <img src="images/linkedin-icon.png" alt="LinkedIn Icon"> LinkedIn Profile
   </a>
   <a href="https://github.com/yourgithub" target="_blank">
-    <img src="github-icon.png" alt="GitHub Icon"> GitHub Profile
+    <img src="images/github-icon.png" alt="GitHub Icon"> GitHub Profile
   </a>
-</div>
-
-<!-- Contact Form -->
-<div class="contact-form">
-  <h2>Send a Message</h2>
-  <form action="submit_form.php" method="POST">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Message</label>
-    <textarea id="message" name="message" rows="4" required></textarea>
-
-    <button type="submit">Send Message</button>
-  </form>
 </div>
 
 </body>
